--- a/src/main/resources/templates/blocks/deleteUser.html
+++ b/src/main/resources/templates/blocks/deleteUser.html
@@ -4,6 +4,7 @@
             <input type="text" name="userID" aria-label="id" placeholder="id" class="form-control">
         </div>
         <div> &nbsp</div>
-        <button type="submit" class="btn btn-primary"> Удалить </button>
+        <button type="submit" class="btn btn-warning"> Удалить </button>
+        <div>&nbsp;</div>
     </form>
 </div>
