--- a/src/main/resources/templates/blocks/registration.html
+++ b/src/main/resources/templates/blocks/registration.html
@@ -3,6 +3,7 @@
     <main class="form-signin">
         <form action="/registration" method="post">
             <img src="/static/logo/registration.png" class="center-img">
+            <div>&nbsp;</div>
             <div>
                 <input type="email" name="username" aria-label="login" placeholder="Email" class="form-control">
             </div>
