--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -2097,7 +2097,7 @@ progress {
 .form-text {
     margin-top: .25rem;
     font-size: .875em;
-    color: #6c757d
+    color: #ffffff
 }
 
 .form-control {
@@ -2107,10 +2107,10 @@ progress {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: white;
     background-color: #151515;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid white;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -2150,7 +2150,7 @@ progress {
 }
 
 .form-control::placeholder {
-    color: #6c757d;
+    color: #ffffff;
     opacity: 1
 }
 
@@ -11644,6 +11644,46 @@ textarea.form-control-lg {
     .d-print-none {
         display: none !important
     }
+}
+.limiter {
+    max-height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+.limiter .bottom {
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(
+            to bottom,
+            rgb(255 217 29 / 0%),
+            rgb(255 217 29)90%);
+    width: 100%;
+    height: 60px;
+    opacity: 1;
+    transition: 0.3s;
+}
+.read-more-checker {
+    opacity: 0;
+    position: absolute;
+}
+.read-more-checker:checked ~ .limiter {
+    max-height: none;
+}
+.read-more-checker:checked ~ .limiter .bottom {
+    opacity: 0;
+    transition: 0.3s;
+}
+.read-more-checker ~ .read-more-button:before {
+    content: "Развернуть »";
+}
+.read-more-checker:checked ~ .read-more-button:before {
+    content: "Свернуть «";
+}
+.read-more-button {
+    cursor: pointer;
+    display: inline-block;
+    color: #777;
+    text-decoration: underline;
 }
 
 /*# sourceMappingURL=bootstrap.min.css.map */
