--- a/src/main/resources/templates/admin/adminreminder.html
+++ b/src/main/resources/templates/admin/adminreminder.html
@@ -9,10 +9,9 @@
     <div class="p-3 bg-dark text-white">
         <header th:insert="blocks/header :: header"></header>
 
-        &nbsp;
+        &nbsp;<div class="container mt-5"  >
         <div th:insert="blocks/sendEmail :: sendEmail"></div>
         &nbsp;
-        <div class="container mt-5">
 
             <div th:insert="blocks/footer :: footer"></div>
         </div>
