--- a/src/main/resources/templates/blocks/profile.html
+++ b/src/main/resources/templates/blocks/profile.html
@@ -23,7 +23,7 @@
             <input type="date" name="birthday" aria-label="birthday" placeholder="birthday"
                    class="form-control">
         </div>
-        <select name="sex" id="sex" style="text-align: center; height: 25px; width: 350px; color: black">
+        <select name="sex" id="sex" style="text-align: center; height: 25px; width: 350px; color: white; background: #151515">
             <option value="male"> male </option>
             <option value="female"> female </option>
             <option value="trans"> trans </option>
@@ -37,7 +37,7 @@
                    class="form-control">
         </div>
         <div> &nbsp</div>
-        <button type="submit" class="btn btn-primary"> сохранить </button>
+        <button type="submit" class="btn btn-warning"> сохранить </button>
     </form>
     </div>
 </div>
