--- a/src/main/resources/templates/blocks/sendEmail.html
+++ b/src/main/resources/templates/blocks/sendEmail.html
@@ -6,6 +6,6 @@
             </select>
         </div>
         <div> &nbsp</div>
-        <button type="submit" class="btn btn-primary"> Отправить емейл юзерам </button>
+        <button type="submit" class="btn btn-warning"> Отправить напоминания </button>
     </form>
 </div>
