--- a/src/main/resources/templates/doctor/doctor.html
+++ b/src/main/resources/templates/doctor/doctor.html
@@ -35,12 +35,17 @@
                 <p style="text-align: center" th:text="${patient.getInsurancePolicy()}"></p>
                 <p style="text-align: center" th:text="${patient.getPlaceOfResidence()}"></p>
             </div>
-            <div th:each="el: ${appointments}" class="alert alert-info mt-2"
-                 style="align-content: center; color: white">
-                <p style="text-align: center" th:text="${el.getDate()}"></p>
-                <p style="text-align: center" th:text="${el.getTime()}"></p>
+            <input type="checkbox" class="read-more-checker" id="read-more-checker"/>
+            <div class="limiter">
+                <div th:each="el: ${appointments}" class="alert alert-info mt-2"
+                     style="align-content: center; color: white">
+                    <p style="text-align: center" th:text="${el.getDate()}"></p>
+                    <p style="text-align: center" th:text="${el.getTime()}"></p>
 
+                </div>
+                <div class="bottom"></div>
             </div>
+            <label for="read-more-checker" class="read-more-button"></label>
 
 
             <div th:insert="blocks/footer :: footer"></div>
