--- a/src/main/resources/templates/function.html
+++ b/src/main/resources/templates/function.html
@@ -4,15 +4,15 @@
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
-    <html lang="en">
+    <div class="container mt-5">
 
-    <div class="p-3 bg-dark text-white">
-        <header th:insert="blocks/header :: header"> </header>
+        <div class="p-3 bg-dark text-white">
+            <header th:insert="blocks/header :: header"></header>
 
             <h1>Функции</h1></div>
 
         <div th:insert="blocks/footer :: footer"></div>
 
-    </html>
+    </div>
 
 </html>
