--- a/src/main/resources/templates/time-reserved.html
+++ b/src/main/resources/templates/time-reserved.html
@@ -9,7 +9,8 @@
     <div class="p-3 bg-dark text-white">
         <header th:insert="blocks/header :: header"></header>
         <div class="container mt-5">
-            <p>У₴БИЩЕ ВРЕМЯ ЗАНЯТО</p>
+            <p>На эту дату время занято</p>
+            <a th:href="'/clinic'" class="btn btn-warning">Выбрать другое время или дату</a>
             <div class="container mt-5">
 
                 <div th:insert="blocks/footer :: footer"></div>
