--- a/src/main/resources/templates/blocks/registration.html
+++ b/src/main/resources/templates/blocks/registration.html
@@ -5,17 +5,17 @@
             <img src="/static/logo/registration.png" class="center-img">
             <div>&nbsp;</div>
             <div>
-                <input type="email" name="username" aria-label="login" placeholder="Email" class="form-control">
+                <input type="email" name="username" aria-label="login" placeholder="Email" class="form-control" style="color: white">
             </div>
 
             <div>
                 <input type="password" name="password" aria-label="password" placeholder="Password"
-                       class="form-control">
+                       class="form-control" style="color: white">
             </div>
             <div>
                 <input type="password" name="passwordConfirm" path="passwordConfirm" aria-label="password"
                        placeholder="Confirm your password"
-                       class="form-control">
+                       class="form-control" style="color: white">
             </div>
             <button type="submit" class="btn btn-warning" style="width: 100%">Зарегистрироваться</button>
 
