--- a/src/main/resources/templates/blocks/sendEmail.html
+++ b/src/main/resources/templates/blocks/sendEmail.html
@@ -1,10 +1,5 @@
 <div th:fragment="sendEmail">
-    <form action="/adminreminder" method="post">
-        <div>
-            <select name="sendEmail" id="sendEmail" style="text-align: center; height: 25px; width: 350px; color: black">
-                <option value="1"> Отправить напоминания </option>
-            </select>
-        </div>
+    <form action="/admin/adminreminder" method="post">
         <div> &nbsp</div>
         <button type="submit" class="btn btn-warning"> Отправить напоминания </button>
     </form>
