--- a/src/main/resources/templates/admin/newdoctor.html
+++ b/src/main/resources/templates/admin/newdoctor.html
@@ -1,31 +1,31 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title> Мейн сайта</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title> Doctors menu </title>
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
-    <html lang="en">
-
-    <div class="container py-3">
-        <header th:insert="blocks/header :: header"></header>
-        <form action="/admin/newdoctor" method="post">
-            <div>
-                <input type="text" name="doctorfio" aria-label="login" placeholder="doctor fio" class="form-control">
-            </div>
-            <div>
-                <input type="text" name="speciality" aria-label="speciality" placeholder="speciality"
-                       class="form-control">
-            </div>
-            <div> &nbsp</div>
-            <button type="submit" class="btn btn-warning"> Добавить доктора</button>
-        </form>
-        &nbsp;
-        <div style="text-align: center">ALL doctors</div>
-        <div th:each="el: ${allDoctors}" sec:authorize="hasRole('ADMIN')" class="alert alert-success"
-             style="align-content: center; background: black; color: white">
 
 
-            <div class="container" >
+    <div class="p-3 bg-dark text-white">
+        <div class="container mt-5">
+            <header th:insert="blocks/header :: header"></header>
+            <form action="/admin/newdoctor" method="post">
+                <div>
+                    <input type="text" name="doctorfio" aria-label="login" placeholder="doctor fio"
+                           class="form-control" style="color: white">
+                </div>
+                <div>
+                    <input type="text" name="speciality" aria-label="speciality" placeholder="speciality"
+                           class="form-control" style="color: white">
+                </div>
+                <div> &nbsp</div>
+                <button type="submit" class="btn btn-warning"> Добавить доктора</button>
+            </form>
+            &nbsp;
+            <div style="text-align: center">ALL doctors</div>
+            <div th:each="el: ${allDoctors}" sec:authorize="hasRole('ADMIN')" class="alert alert-success"
+                 style="align-content: center; background: black; color: white">
+
+
                 <div class="row">
                     <div class="col" th:text="${el.id}">
                     </div>
@@ -33,12 +33,13 @@
                     </div>
                     <div class="col" th:text="${el.speciality}">
                     </div>
+
                 </div>
+                <a th:href="'/admin/doctor/'+ ${el.id} +'/delete'" class="btn btn-warning">Удалить </a>
             </div>
+
+            <div th:insert="blocks/footer :: footer"></div>
         </div>
-
-        <div th:insert="blocks/footer :: footer"></div>
     </div>
-    </html>
-
 </html>
+
