--- a/src/main/resources/templates/blocks/deleteUser.html
+++ b/src/main/resources/templates/blocks/deleteUser.html
@@ -1,7 +1,7 @@
 <div th:fragment="deleteUser">
     <form action="/admin" method="post">
         <div>
-            <input type="text" name="userID" aria-label="id" placeholder="id" class="form-control">
+            <input type="text" name="userID" aria-label="id" placeholder="id" class="form-control" style="color: white">
         </div>
         <div> &nbsp</div>
         <button type="submit" class="btn btn-warning"> Удалить </button>
