--- a/src/main/resources/templates/blocks/login.html
+++ b/src/main/resources/templates/blocks/login.html
@@ -10,12 +10,12 @@
 
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com"
-                       name="username">
+                       name="username" style="color: white">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
-                       name="password">
+                       name="password" style="color: white">
                 <label for="floatingPassword">Password</label>
             </div>
 
