change text color with black to white

--- a/src/main/resources/templates/blocks/clinic.html
+++ b/src/main/resources/templates/blocks/clinic.html
@@ -10,11 +10,11 @@
         <div class="mb-3">
             <label id="datelabel" style="text-align: center; width:350px"> &nbsp; </label>
             <input type="date" name="date" class="form-control" id="exampleInputDay"
-                   style="text-align: center; width:350px" aria-describedby="dayHelp">
+                   style="text-align: center; color: white; width:350px" aria-describedby="dayHelp">
             <div id="dayHelp" class="form-text">Выберите дату записи</div>
         </div>
         <div>&nbsp;</div>
-        <select name="time" id="time" style="text-align: center; height: 25px; width: 350px; color: white; background: #151515">
+        <select name="time" id="time" style="text-align: center; height: 25px; width: 350px; color: white; background: #151515"     >
             <option value="9.00"> 9.00</option>
             <option value="10.00"> 10.00</option>
             <option value="11.00"> 11.00</option>
