--- a/src/main/resources/templates/doctor/appointmentEdit.html
+++ b/src/main/resources/templates/doctor/appointmentEdit.html
@@ -10,22 +10,22 @@
     <form method="post">
         <div>
             <input type="text" name="diagnosis" aria-label="diagnosis" placeholder="diagnosis"
-                   class="form-control">
+                   class="form-control" style="color: white">
         </div>
         <div> &nbsp</div>
         <div>
             <input type="text" name="recommendations" aria-label="recommendations" placeholder="recommendations"
-                   class="form-control">
+                   class="form-control" style="color: white">
         </div>
         <div> &nbsp</div>
         <div>
             <input type="text" name="symptoms" aria-label="symptoms" placeholder="symptoms"
-                   class="form-control">
+                   class="form-control" style="color: white">
         </div>
         <div> &nbsp</div>
         <div>
             <input type="text" name="treatment" aria-label="treatment" placeholder="treatment"
-                   class="form-control">
+                   class="form-control" style="color: white">
         </div>
         <button type="submit" class="btn btn-primary"> Сохранить</button>
     </form>
