--- a/src/main/resources/templates/patient/appointmentEdit.html
+++ b/src/main/resources/templates/patient/appointmentEdit.html
@@ -18,7 +18,7 @@
         <div class="mb-3">
             <label id="datelabel" style="text-align: center; width:350px"> &nbsp; </label>
             <input type="date" name="date" class="form-control" id="exampleInputDay"
-                   style="text-align: center; width:350px" aria-describedby="dayHelp">
+                   style="text-align: center; width:350px; color: white" aria-describedby="dayHelp">
             <div id="dayHelp" class="form-text">Выберите дату записи</div>
         </div>
         <div>&nbsp;</div>
