--- a/src/main/resources/templates/patient/changePatientProfile.html
+++ b/src/main/resources/templates/patient/changePatientProfile.html
@@ -12,11 +12,11 @@
         <div class="container mt-5">
             <form  method="post">
                 <div>
-                    <input type="text" name="fio" aria-label="fio" placeholder="fio" class="form-control">
+                    <input type="text" name="fio" aria-label="fio" placeholder="fio" class="form-control" style="color: white">
                 </div>
                 <div>
                     <input type="date" name="birthday" aria-label="birthday" placeholder="birthday"
-                           class="form-control">
+                           class="form-control" style="color: white">
                 </div>
                 <select name="sex" id="sex"
                         style="text-align: center; height: 25px; width: 350px; color: white; background: #151515">
@@ -26,11 +26,11 @@
                 </select>
                 <div>
                     <input type="text" name="placeOfResidence" aria-label="placeOfResidence" placeholder="placeOfResidence"
-                           class="form-control">
+                           class="form-control" style="color: white">
                 </div>
                 <div>
                     <input type="text" name="insurancePolicy" aria-label="insurancePolicy" placeholder="insurancePolicy"
-                           class="form-control">
+                           class="form-control" style="color: white">
                 </div>
                 <div> &nbsp</div>
                 <button type="submit" class="btn btn-warning"> сохранить</button>
