--- a/src/main/resources/templates/patient/changePatientProfile.html
+++ b/src/main/resources/templates/patient/changePatientProfile.html
@@ -29,6 +29,10 @@
                            class="form-control" style="color: white">
                 </div>
                 <div>
+                    <input type="text" name="phoneNumber" aria-label="phoneNumber" placeholder="phoneNumber"
+                           class="form-control" style="color: white">
+                </div>
+                <div>
                     <input type="text" name="insurancePolicy" aria-label="insurancePolicy" placeholder="insurancePolicy"
                            class="form-control" style="color: white">
                 </div>
