--- a/src/main/resources/templates/blocks/addProfileInfo.html
+++ b/src/main/resources/templates/blocks/addProfileInfo.html
@@ -22,6 +22,10 @@
                 <input type="text" name="insurancePolicy" aria-label="insurancePolicy" placeholder="insurancePolicy"
                        class="form-control" style="color: white">
             </div>
+            <div>
+                <input type="text" name="phoneNumber" aria-label="phoneNumber" placeholder="phoneNumber"
+                       class="form-control" style="color: white">
+            </div>
             <div> &nbsp</div>
             <button type="submit" class="btn btn-warning"> сохранить</button>
         </form>
