--- a/src/main/resources/templates/patient/patientTreatment.html
+++ b/src/main/resources/templates/patient/patientTreatment.html
@@ -11,7 +11,7 @@
 <input type="checkbox" class="read-more-checker" id="read-more-checker"/>
 <div class="limiter">
 
-        <div th:each="el: ${treatmentInformation}" sec:authorize="hasRole('DOCTOR')" class="alert alert-info mt-2"
+        <div th:each="el: ${treatmentInformation}" sec:authorize="hasRole('USER')" class="alert alert-info mt-2"
              style="align-content: center; color: white">
 
             <h3 style="text-align: center" th:text="${el.getDate()}"></h3>
