--- a/src/main/resources/templates/blocks/clinic.html
+++ b/src/main/resources/templates/blocks/clinic.html
@@ -1,5 +1,5 @@
 <div th:fragment="clinic" xmlns:sec="http://www.w3.org/1999/xhtml">
-    <form action="/clinic" method="post">
+    <form action="/templates/clinic" method="post">
 
         <div class="mb-3">
             <label id="clientlabel" style="text-align: center; width:350px"> &nbsp; </label>
@@ -38,5 +38,9 @@
         <div id="personHelp" class="form-text">Выберите врача</div>
         <div> &nbsp</div>
         <button type="submit" class="btn btn-warning">Записаться</button>
+
+
+
+
     </form>
 </div>
