--- a/src/main/resources/templates/blocks/header1.html
+++ b/src/main/resources/templates/blocks/header1.html
@@ -22,7 +22,7 @@
             <a sec:authorize="hasRole('DOCTOR')" class="me-3 py-2 text-dark text-decoration-none" href="/doctor/patientAppointment">запись на СЕГОДНЯ</a>
             <a sec:authorize="hasRole('ADMIN')" class="me-3 py-2 text-dark text-decoration-none" href="/function">Функции</a>
             <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none"
-               href="/clinic">Клиника</a>
+               href="/templates/clinic">Клиника</a>
             <a sec:authorize="hasRole('ADMIN')" class="me-3 py-2 text-dark text-decoration-none"
                href="/admin">Админка</a>
 
