--- a/src/main/resources/templates/blocks/homeForUsers.html
+++ b/src/main/resources/templates/blocks/homeForUsers.html
@@ -9,7 +9,7 @@
 
 
 
-        <a th:href="'/user/appointment/'+ ${el.getDoctorsappointmentsID()} +'/edit'" class="btn btn-warning">Изменить запись </a>
+<!--        <a th:href="'/user/appointment/'+ ${el.getDoctorsappointmentsID()} +'/edit'" class="btn btn-warning">Изменить запись </a>-->
         <a th:href="'/user/appointment/'+ ${el.getDoctorsappointmentsID()} +'/delete'" class="btn btn-warning">Отменить</a>
     </div>
 </div>
