--- a/src/main/resources/templates/blocks/profile.html
+++ b/src/main/resources/templates/blocks/profile.html
@@ -3,9 +3,9 @@
     <div class="container mt-5">
     <a th:href="'/profileEdit'" class="btn btn-warning">Заполнить профиль </a>
 
-        <div th:each="el: ${patientCard}" class="alert alert-info mt-2 "
+        <div th:each="el: ${patient}" class="alert alert-info mt-2 "
              style="align-content: center; color: white">
-            <h3 style="text-align: center" th:text="${el.fio}"></h3>
+            <h3 style="text-align: center" th:text="${el.getFio()}"></h3>
             <p style="text-align: center" th:text="${el.email}"></p>
             <p style="text-align: center" th:text="${el.sex}"></p>
             <p style="text-align: center" th:text="${el.getPhoneNumber()}"></p>
